--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <title>Comment Section</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gotham:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
