--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Comment Section</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gotham:wght@400;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Comment Section</h1>
+      <div class="sort-buttons">
+        <button id="sortLatest">Sort by Latest</button>
+        <button id="sortEarliest">Sort by Earliest</button>
+      </div>
+      <form id="commentForm">
+        <textarea id="commentInput" placeholder="Write your comment..."></textarea>
+        <button type="submit">Add Comment</button>
+      </form>
+      <div id="commentList"></div>
+    </div>
 
-<head>
-  <title>Comment Section</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Gotham:wght@400;700&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
-  <div class="container">
-    <h1>Comment Section</h1>
-    <form id="commentForm">
-      <textarea id="commentInput" placeholder="Write your comment..."></textarea>
-      <button type="submit">Add Comment</button>
-    </form>
-    <div id="commentList"></div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
